--- a/package.json
+++ b/package.json
@@ -1,5 +1,46 @@
 {
-  "name": "dontshowmethat",
+  "name": "dont-show-me-that",
   "private": true,
-  "dependencies": {}
+  "version": "1.0.0",
+  "description": "A site to show you what things to avoid",
+  "main": "index.js",
+  "scripts": {
+    "postinstall": "NODE_ENV=production gulp build --type=production"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:pickledyamsman/dontshowmethat.git"
+  },
+  "author": "Matthew Cianciolo",
+  "license": "MIT",
+  "dependencies": {
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babelify": "^7.3.0",
+    "bootstrap-sass": "^3.3.7",
+    "browser-sync": "^2.17.3",
+    "browserify": "^13.1.0",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-sequence": "^0.4.6",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "humps": "^1.1.0",
+    "immutable": "^3.8.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.0",
+    "redux-thunk": "^2.1.0",
+    "require-dir": "^0.3.1",
+    "superagent": "^2.3.0",
+    "vinyl-source-stream": "^1.1.0"
+  }
 }
